Domainmodel adapted to use Jbase
Change-Id: I97f16a4f75f9b600b75502d68ae1277ee75854f1

--- a/jbase.doc/contents/00-Main.html
+++ b/jbase.doc/contents/00-Main.html
@@ -14,6 +14,8 @@
 <li><a href="02-GettingStarted.html#GettingStarted">Getting Started</a>
 <ol>	<li><a href="02-GettingStarted.html#FirstTutorial">First Tutorial</a>
 	</li>
+	<li><a href="02-GettingStarted.html#Domainmodel">The Domainmodel with Jbase</a>
+	</li>
 </ol></li>
 </ol></body>
 </html>
