--- a/jbase.doc/contents/00-Main.html
+++ b/jbase.doc/contents/00-Main.html
@@ -17,5 +17,9 @@
 	<li><a href="02-GettingStarted.html#Domainmodel">The Domainmodel with Jbase</a>
 	</li>
 </ol></li>
+<li><a href="03-Additional.html#Additional">Additional Features</a>
+<ol>	<li><a href="03-Additional.html#VariableInitialization">Checking Variable Initialization</a>
+	</li>
+</ol></li>
 </ol></body>
 </html>
