Added documentation for checkMissingReturn

--- a/jbase.doc/contents/00-Main.html
+++ b/jbase.doc/contents/00-Main.html
@@ -18,7 +18,9 @@
 	</li>
 </ol></li>
 <li><a href="03-Additional.html#Additional">Additional Features</a>
-<ol>	<li><a href="03-Additional.html#VariableInitialization">Checking Variable Initialization</a>
+<ol>	<li><a href="03-Additional.html#MissingReturn">Checking Missing Return</a>
+	</li>
+	<li><a href="03-Additional.html#VariableInitialization">Checking Variable Initialization</a>
 	</li>
 </ol></li>
 </ol></body>
