27: updated documentation for the new Xtext generator
Task-Url: https://github.com/LorenzoBettini/jbase/issues/issue/27

--- a/jbase.doc/contents/00-Main.html
+++ b/jbase.doc/contents/00-Main.html
@@ -13,7 +13,13 @@
 </li>
 <li><a href="02-GettingStarted.html#GettingStarted">Getting Started</a>
 <ol>	<li><a href="02-GettingStarted.html#FirstTutorial">First Tutorial</a>
-	</li>
+	<ol>	<li><a href="02-GettingStarted.html#NewGenerator">Using the new Xtext generator (version 2.9 on)</a>
+		</li>
+		<li><a href="02-GettingStarted.html#OldGenerator">Using the old Xtext generator (before version 2.9)</a>
+		</li>
+		<li><a href="02-GettingStarted.html#UseJbaseGrammar">Use Jbase rules in your grammar</a>
+		</li>
+	</ol></li>
 	<li><a href="02-GettingStarted.html#Domainmodel">The Domainmodel with Jbase</a>
 	</li>
 </ol></li>
