48: document jbase.lib
Task-Url: https://github.com/LorenzoBettini/jbase/issues/48

--- a/jbase.doc/contents/02-GettingStarted.html
+++ b/jbase.doc/contents/02-GettingStarted.html
@@ -10,6 +10,20 @@
 <body>
 <a name="GettingStarted"></a>
 <h1>Getting Started</h1>
+<a name="JbaseLib"></a>
+<h2>Jbase Runtime Library</h2>
+<p>
+If you already know Xbase, you know that the projects that use your DSL must have a dependency
+on <em>org.eclipse.xtext.xbase.lib</em>.
+</p>
+<p>
+If you switch to Jbase, you need to replace such a dependency with
+<em>jbase.lib</em>. This library implicitly depends on <em>org.eclipse.xtext.xbase.lib</em> and
+re-exports that.
+</p>
+<p>
+NOTE: <em>jbase.lib</em> has been introduced in version 0.4.0.
+</p>
 <a name="FirstTutorial"></a>
 <h2>First Tutorial</h2>
 <p>
