--- a/jbase.doc/contents/00-Main.html
+++ b/jbase.doc/contents/00-Main.html
@@ -12,7 +12,9 @@
 <ol><li><a href="01-Introduction.html#Introduction">Introduction</a>
 </li>
 <li><a href="02-GettingStarted.html#GettingStarted">Getting Started</a>
-<ol>	<li><a href="02-GettingStarted.html#FirstTutorial">First Tutorial</a>
+<ol>	<li><a href="02-GettingStarted.html#JbaseLib">Jbase Runtime Library</a>
+	</li>
+	<li><a href="02-GettingStarted.html#FirstTutorial">First Tutorial</a>
 	<ol>	<li><a href="02-GettingStarted.html#NewGenerator">Using the new Xtext generator (version 2.9 on)</a>
 		</li>
 		<li><a href="02-GettingStarted.html#OldGenerator">Using the old Xtext generator (before version 2.9)</a>
