104: mention deprecation of old generator
Task-Url: https://github.com/LorenzoBettini/jbase/issues/104

--- a/jbase.doc/contents/02-GettingStarted.html
+++ b/jbase.doc/contents/02-GettingStarted.html
@@ -114,6 +114,10 @@ ui project.
 <a name="OldGenerator"></a>
 <h3>Using the old Xtext generator (before version 2.9)</h3>
 <p>
+<em>IMPORTANT</em>: Please keep in mind that the old generator has been deprecated
+for a long time now.
+</p>
+<p>
 SKIP THIS SECTION IF YOU ARE USING THE NEW XTEXT GENERATOR
 (i.e., the one described in <a href="02-GettingStarted.html#NewGenerator" title="Go to &quot;Using the new Xtext generator (version 2.9 on)&quot;" >section NewGenerator</a>).
 </p>
