115: deprecated old generator in doc
Task-Url: https://github.com/LorenzoBettini/jbase/issues/115

--- a/jbase.doc/contents/00-Main.html
+++ b/jbase.doc/contents/00-Main.html
@@ -15,7 +15,7 @@
 <ol>	<li><a href="02-GettingStarted.html#JbaseLib">Jbase Runtime Library</a>
 	</li>
 	<li><a href="02-GettingStarted.html#FirstTutorial">First Tutorial</a>
-	<ol>	<li><a href="02-GettingStarted.html#NewGenerator">Using the new Xtext generator (version 2.9 on)</a>
+	<ol>	<li><a href="02-GettingStarted.html#NewGenerator">Tweaking the Xtext generator</a>
 		</li>
 		<li><a href="02-GettingStarted.html#OldGenerator">Using the old Xtext generator (before version 2.9)</a>
 		</li>
