--- a/jbase.doc/contents/02-GettingStarted.html
+++ b/jbase.doc/contents/02-GettingStarted.html
@@ -80,7 +80,7 @@ Tweak the MWE2 workflow as detailed in the next sections, making sure you read t
 one related to the version of Xtext&apos;s generator you are using.
 </p>
 <a name="NewGenerator"></a>
-<h3>Using the new Xtext generator (version 2.9 on)</h3>
+<h3>Tweaking the Xtext generator</h3>
 <p>
 Open the <em>MWE2</em> workflow, <em>GenerateMyDsl.mwe2</em> and
 </p>
@@ -114,12 +114,7 @@ ui project.
 <a name="OldGenerator"></a>
 <h3>Using the old Xtext generator (before version 2.9)</h3>
 <p>
-<em>IMPORTANT</em>: Please keep in mind that the old generator has been deprecated
-for a long time now.
-</p>
-<p>
-SKIP THIS SECTION IF YOU ARE USING THE NEW XTEXT GENERATOR
-(i.e., the one described in <a href="02-GettingStarted.html#NewGenerator" title="Go to &quot;Using the new Xtext generator (version 2.9 on)&quot;" >section NewGenerator</a>).
+THIS IS NO LONGER SUPPORTED SINCE VERSION 0.12.0 OF JBASE.
 </p>
 <p>
 Open the <em>MWE2</em> workflow, <em>GenerateMyDsl.mwe2</em> and
